# backend

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
operations/: README.md  deployment.md  local-development.md  release-checklist.md
src/backend/: __main__.py  demo_sessions.py  session_context.py
src/backend/agent_hub/: agent_hub.py
src/backend/controller_store/: watering.py
src/backend/entities_store/: entities.py
src/backend/policy/: __init__.py  watering.py
src/backend/routes/: command.py  documentation.py  health.py  seed.py
src/backend/routes/domains/non_watering/: controllers.py
src/backend/routes/domains/watering/: controllers.py  rules.py
src/backend/routes/dynamic/: entities.py
src/backend/routes/semantic/: classify.py
src/backend/routes/ws/: agent.py
src/backend/rules_store/: watering.py
src/backend/runners/: watering.py
src/backend/scheduler/: watering.py
src/backend/schemas/: agents.py  classification.py  commands.py  controller.py  entities.py  generic_controller.py  ha_messages.py  rules.py  zone.py
src/backend/semantic/: capabilities.py  classifier.py  watering_why.py
src/backend/settings/: config.py
src/backend/watering_fsm/: __init__.py  runtime.py
tests/: test_classifier.py  test_entity_sources.py  test_policy_watering.py  test_runtime_watering.py  test_scheduler_watering.py
