[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.128.0",
    "pydantic==2.12.4",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.12.0",
    "scalar-fastapi>=1.6.1",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["backend*"]
